form field in samanira page finished

--- a/samanira.html
+++ b/samanira.html
@@ -649,7 +649,7 @@
     width:13px;
     height: 13px;
     opacity: 0;
-    background-color: #121212;
+    background-color: #0a9abd;
     border-radius: 50%;
     -webkit-transition:all .2s ease-in-out;
     -moz-transition:all .2s ease-in-out;
@@ -663,9 +663,20 @@
                                     <p>- These are custom radio inputs &amp; checkbox inputs</p>
                                     <div class="sample-box">
                                         <div class="checkbox-holder">
-                                            <input type="checkbox" id="checkbox" />
-                                            <label for="checkbox">Sample checkbox</label>
+                                            <input type="checkbox" name="checkbox_input" id="checkbox" />
+                                            <label for="checkbox">Sample Checkbox 1</label>
+                                            <br />
+                                            <input type="checkbox" name="checkbox_input" id="checkbox2" />
+                                            <label for="checkbox2">Sample Checkbox 2</label>
                                         </div><!-- checkbox-holder end -->
+                                        <br />
+                                        <div class="radio-holder">
+                                            <input type="radio" name="radio_input" id="radio" />
+                                            <label for="radio">Sample Radio 1</label>
+                                            <br />
+                                            <input type="radio" name="radio_input" id="radio2" />
+                                            <label for="radio2">Sample Radio 2</label>
+                                        </div><!-- radio-holder end -->
                                     </div><!-- sample-box end -->
                                 </div><!-- class-box end -->
                             </div><!-- defined-classes end --> 
