small changes in names

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -822,7 +822,7 @@
 </code>    
 </pre>                                    
                                     </div><!-- css-code-box end -->         
-                                    <p>- Switch button for some forms and admin panels</p>
+                                    <p>- Switch button for some forms and admin panels with javascript functions in samanira.js</p>
                                     <div class="sample-box">
                                         <a class="switch" href="javascript:void(0)"></a>
                                     </div><!-- sample-box end -->     
@@ -855,7 +855,7 @@
 </code>    
 </pre>                                    
                                     </div><!-- css-code-box end -->  
-                                    <p>- Nav toggle for mobile menu display</p>
+                                    <p>- Nav toggle for mobile menu display with javascript functions in samanira.js</p>
                                     <div class="sample-box">
                                         <div class="nav-toggle">
                                             <span></span>
@@ -891,7 +891,7 @@
 </code>    
 </pre>                                    
                                     </div><!-- css-code-box end -->  
-                                    <p>- Remove and close buttons for boxes</p>  
+                                    <p>- Remove and close buttons for boxes with javascript functions in samanira.js</p>  
                                     <div class="sample-box">
                                         <div class="site-bg has-padding has-bottom-margin relative-position has-border-radius">
                                             <a class="remove" href="javascript:void(0)"></a>
