added common styles in samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -906,6 +906,93 @@
                                     <h6>_Main Styles</h6>
 
                                 </div><!-- class-box end -->
+                                <div class="class-box">
+                                    <h5>#COMMON</h5>
+                                    <h6>_Page Styles</h6>
+                                    <div class="css-code-box">
+<pre>
+<code>
+<span class="selector">.white-bg</span><span class="code-item">{</span>background-color: #ffffff;<span class="code-item">}</span>
+<span class="selector">.black-bg</span><span class="code-item">{</span>background-color: #000000;<span class="code-item">}</span>
+<span class="selector">.site-bg</span><span class="code-item">{</span>background-color: #0a9abd;<span class="code-item">}</span>
+<span class="selector">.site-2-bg</span><span class="code-item">{</span>background-color: #f55757;<span class="code-item">}</span>
+
+<span class="selector">.auto-width</span><span class="code-item">{</span>width: auto;<span class="code-item">}</span>
+<span class="selector">.full-width</span><span class="code-item">{</span>width: 100% !important;<span class="code-item">}</span>
+<span class="selector">.full-height</span><span class="code-item">{</span>height: 100% !important;<span class="code-item">}</span>
+
+<span class="selector">.no-overflow</span><span class="code-item">{</span>overflow: visible !important;<span class="code-item">}</span>
+<span class="selector">.auto-overflow</span><span class="code-item">{</span>overflow: auto !important;<span class="code-item">}</span>
+<span class="selector">.hidden-overflow</span><span class="code-item">{</span>overflow: hidden !important;<span class="code-item">}</span>
+<span class="selector">.hidden-visibility</span><span class="code-item">{</span>visibility: hidden !important;<span class="code-item">}</span>
+
+<span class="selector">.inline-display</span><span class="code-item">{</span>display: inline !important;<span class="code-item">}</span>
+<span class="selector">.inline-block-display</span><span class="code-item">{</span>display: inline-block !important;<span class="code-item">}</span>
+<span class="selector">.block-display</span><span class="code-item">{</span>display: block !important;<span class="code-item">}</span>
+<span class="selector">.none-display</span><span class="code-item">{</span>display: none !important;<span class="code-item">}</span>
+<span class="selector">.table-display</span><span class="code-item">{</span>
+    display: table !important;
+    width: 100%;
+    height: 100%;
+<span class="code-item">}</span>
+<span class="selector">.table-cell-display</span><span class="code-item">{</span>
+    display: table-cell !important;
+    width: 100%;
+    height: 100%;
+<span class="code-item">}</span>
+
+<span class="selector">.static-position</span><span class="code-item">{</span>position: static;<span class="code-item">}</span>
+<span class="selector">.relative-position</span><span class="code-item">{</span>position: relative;<span class="code-item">}</span>
+<span class="selector">.z-index</span><span class="code-item">{</span>
+    position: relative;
+    z-index: 100;
+<span class="code-item">}</span>
+
+<span class="selector">.top-aligned</span><span class="code-item">{</span>vertical-align: top;<span class="code-item">}</span>
+<span class="selector">.vertical-aligned</span><span class="code-item">{</span>vertical-align: middle;<span class="code-item">}</span>
+<span class="selector">.bottom-aligned</span><span class="code-item">{</span>vertical-align: bottom;<span class="code-item">}</span>
+
+<span class="selector">.no-boxshadow</span><span class="code-item">{</span>
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+<span class="code-item">}</span>
+<span class="selector">.has-boxshadow</span><span class="code-item">{</span>
+    -webkit-box-shadow: 0 0 10px #121212 !important;
+    -moz-box-shadow: 0 0 10px #121212 !important;
+    box-shadow: 0 0 10px #121212 !important;
+<span class="code-item">}</span>
+
+<span class="selector">.has-transition</span><span class="code-item">{</span>
+    -webkit-transition:all .2s linear;
+    -moz-transition:all .2s linear;
+    transition:all .2s linear;
+<span class="code-item">}</span>
+<span class="selector">.has-ease-transition</span><span class="code-item">{</span>
+    -webkit-transition:all .2s ease-in-out;
+    -moz-transition:all .2s ease-in-out;
+    transition:all .2s ease-in-out;
+<span class="code-item">}</span>
+<span class="selector">.has-ease-in-transition</span><span class="code-item">{</span>
+    -webkit-transition:all .2s ease-in;
+    -moz-transition:all .2s ease-in;
+    transition:all .2s ease-in;
+<span class="code-item">}</span>
+<span class="selector">.has-ease-out-transition</span><span class="code-item">{</span>
+    -webkit-transition:all .2s ease-out;
+    -moz-transition:all .2s ease-out;
+    transition:all .2s ease-out;
+<span class="code-item">}</span>
+<span class="selector">.has-cubic-transition</span><span class="code-item">{</span>
+    -webkit-transition:all .2s cubic-bezier(.15,.41,.89,.63);
+    -moz-transition:all .2s cubic-bezier(.15,.41,.89,.63);
+    transition:all .2s cubic-bezier(.15,.41,.89,.63);
+<span class="code-item">}</span>
+</code>    
+</pre>                                    
+                                    </div><!-- css-code-box end --> 
+                                    <h6>_Font Styles</h6>
+                                </div><!-- class-box end -->
                             </div><!-- defined-classes end --> 
                         </div><!-- main-port-content end -->
                         <div class="side-port-content">
