changed some items in samanira page

--- a/samanira/index.html
+++ b/samanira/index.html
@@ -1778,6 +1778,68 @@
                                     </div><!-- css-code-box end -->
 
                                 </div><!-- class-box end -->
+                                <div class="class-box">
+                                    <h5>#TABLES</h5>
+                                    <h6>_Main Styles</h6>
+                                    <div class="css-code-box">
+<pre>
+<code>
+
+</code>    
+</pre>                                    
+                                    </div><!-- css-code-box end -->
+                                    <h6>_Table Filter</h6>
+                                    <div class="css-code-box">
+<pre>
+<code>
+
+</code>    
+</pre>                                    
+                                    </div><!-- css-code-box end -->
+                                    <h6>_Div Table</h6>
+                                    <div class="css-code-box">
+<pre>
+<code>
+
+</code>    
+</pre>                                    
+                                    </div><!-- css-code-box end -->
+                                </div><!-- class-box end -->
+                                <div class="class-box">
+                                    <h5>#LAYOUT</h5>
+                                    <h6>_Main Styles</h6>
+                                    <div class="css-code-box">
+<pre>
+<code>
+
+</code>    
+</pre>                                    
+                                    </div><!-- css-code-box end -->
+                                    <h6>_Normal Columns</h6>
+                                    <div class="css-code-box">
+<pre>
+<code>
+
+</code>    
+</pre>                                    
+                                    </div><!-- css-code-box end -->
+                                    <h6>_Cl Columns</h6>
+                                    <div class="css-code-box">
+<pre>
+<code>
+
+</code>    
+</pre>                                    
+                                    </div><!-- css-code-box end -->
+                                    <h6>_Has Columns</h6>
+                                    <div class="css-code-box">
+<pre>
+<code>
+
+</code>    
+</pre>                                    
+                                    </div><!-- css-code-box end -->
+                                </div><!-- class-box end -->
                             </div><!-- defined-classes end --> 
                         </div><!-- main-port-content end -->
                         <div class="side-port-content">
